syntax  = "proto3";


package message;

import "google/protobuf/timestamp.proto";

message User {
    uint32 id =1;
    // username is email
    string username =2;
    string password =3;
}

message SignUpRequest {
    string username = 1;
    string password = 2;
}

message SignUpResponse {
    User user = 1;
}

message AccessToken{
    string access_token = 1;
}

message Credentials{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    bool ok = 1;
    optional string error = 2;
    optional AccessToken data = 3;
    optional google.protobuf.Timestamp login_at = 4;
}

message LogoutRequest {
    AccessToken access_token = 1 ;
}

message LogoutResponse {
    bool ok = 1;
    optional string error = 2;
}
